--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,9 @@
-<p>card works!</p>
+<a href="" class="cardContainder">
+
+    <img class="cardImg" [src]=[gameCover] alt="" srcset="">
+
+    <app-card-label gameLabel="{{ gameLabel }}"></app-card-label>
+
+    <app-card-price gameType="{{ gameType }}" gamePrice="{{ gamePrice }}"></app-card-price>
+
+</a>
