--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="home_container">
+
+    <app-card gameCover="assets/bt-1.jpg" gameLabel="DIGITAL" gameType="DIGITAL PS4" gamePrice="R$ 199,99"></app-card>
+    <app-card gameCover="assets/bt-4.jpg" gameLabel="EXCLUSIVO" gameType="DIGITAL PS4" gamePrice="R$ 249,99"></app-card>
+    <app-card gameCover="assets/bt-5.jpg" gameLabel="DIGITAL" gameType="DISC PS4" gamePrice="R$ 299,99"></app-card>
+    <app-card gameCover="assets/bt-bad-company-2.jpg" gameLabel="DIGITAL" gameType="DIGITAL PS4" gamePrice="R$ 199,99"></app-card>
+    <app-card gameCover="assets/bt-hardline.jpg" gameLabel="EXCLUSIVO" gameType="DIGITAL PS4" gamePrice="R$ 249,99"></app-card>
+    <app-card gameCover="assets/bt-1.jpg" gameLabel="DIGITAL" gameType="DISC PS4" gamePrice="R$ 299,99"></app-card>
+
+</div>
