--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,15 @@
-<p>menu-bar works!</p>
+<div class="menuBar_container">
+
+    <div class="menuBar_logo">
+        <img src="assets/ps-logo.png" alt="" srcset="" width="140px" height="32px">
+    </div>
+
+    <div class="menuBar_item">
+        <ul>
+            <li><a href="">YouTube</a></li>
+            <li><a href="">LinkedIn</a></li>
+            <li><a href="">GitHub</a></li>
+        </ul>
+    </div>
+
+</div>
