--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: rgb(0,5,78);
+    background: linear-gradient(100deg, rgba(0,5,78,1) 26%, rgba(3,0,218,1) 69%, rgba(4,0,255,1) 86%);
+}
